kubernetes/apps/base/storage/kopiur/repository/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia
spec:
  hostnames:
    - "${KOPIA_UI_SUBDOMAIN}.${CLUSTER_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: mnemosyne-kopia-ui
          namespace: storage
          port: 51515
